--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "type": "module",
   "name": "gridnine",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development"
+    "start": "webpack serve --mode development",
+    "lint": "npx eslint"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
@@ -17,14 +19,17 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.1.0",
+    "eslint": "^9.10.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.1",
     "msw": "^2.4.8",
+    "prettier": "^3.3.3",
     "sass": "^1.78.0",
     "sass-loader": "^16.0.1",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.2",
+    "typescript-eslint": "^8.6.0",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
