--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "jsx": "react",
-    "types": ["node"]
+    "types": ["node"],
+    "lib": ["ESNext", "dom"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "public"]
